--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: protospace_39596_development
+  database: protospace_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: protospace_39596_test
+  database: protospace_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: protospace_39596_production
-  username: protospace_39596
-  password: <%= ENV["PROTOSPACE_39596_DATABASE_PASSWORD"] %>
+  database: protospace_production
+  username: protospace
+  password: <%= ENV["PROTOSPACE_DATABASE_PASSWORD"] %>
